[package]
name = "request_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
